DDBNEXT-876: Layout issues public favorite page

--- a/web-app/css/favorites.css
+++ b/web-app/css/favorites.css
@@ -103,6 +103,7 @@ hr {
   text-align: right;
   display: inline-block;
   float: right;
+  margin-top: 20px;
 }
 
 .favorites-results-container .page-filter,.sort-results-switch {
